daemon.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
    type: logging
spec:
  template:
    metadata:
      name: elasticsearch
      namespace: kube-system
      labels:
        app: elasticsearch-app
        type: logging
    spec:
      containers:
      - name: elasticsearch
        image: registry.k8s.io/fluentd-elasticsearch:1.20
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      type: logging
