event-simulator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: event-simulator
  labels:
    name: loggingapp
spec:
  containers:
  - name: event-simulator
    image: kodekloud/event-simulator
