logstorage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  labels:
    name: webapp
spec:
  containers:
  - name: webapp
    image: kodekloud/event-simulator
    volumeMounts:
    - name: data-volume
      mountPath: /log
  volumes:
  - name: data-volume
    hostPath:
      path: /var/log/webapp
      type: Directory
