nginx-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    volumeMounts:
    - name: data-volume
      mountPath: /var/www/html

  volumes:
  - name: data-volume
    persistentVolumeClaim:
      claimName: local-pvc
