pod-with-security.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-myapp
  labels:
    name: nginx-with-securuty
spec:
  containers:
  - name: nginx-myapp
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
    - containerPort: 80
    securityContext:
      runAsUser: 1000
      capabilities:
        add: ["MAC_ADMIN"]
