podwtihVol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: Random number storage
  labels:
    name: myapp
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["/bin/sh", "-c"]
    args: ["shug -i 0-100 -n 1 >> /opt.number.out;"]
    volumeMounts:
    - name: data-volume
      mountPath: /opt

  volumes:
  - name: data-volume
    hostPath:
      path: /data
      type: Directory
