red.yaml
apiVersion: v1
kind: Pod
metadata:
  name: red
  labels:
    name: red
spec:
  containers:
  - name: red
    image: busybox:1.28
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
  initContainer:
  - name: init-red
    image: busybox
    command: ['sleep', '20']
