redis.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    app: redis
    function: backend
spec:
  containers:
  - name: redis
    image: redis
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
    - containerPort: 80
