ubuntu-sleeper-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-sleeper
  labels:
    name: ubuntu-sleeper
spec:
  containers:
  - commands:
    - sleep
    - "5000"
  - name: ubuntu
    image: ubuntu
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
    - containerPort: <Port>
