service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
  - targetPort: 80
    protocol: TCP
    port: 80
    nodePort: 30008
  selector:
    app: myapp-deployment
    type: frontend
