ingress-wear.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
  labels:
    name: ingress-wear
spec:
  backend:
    serviceName: wear-service
    servicePort: 80
